[gd_scene load_steps=2 format=3 uid="uid://chmii5jckjwxk"]

[ext_resource type="Script" path="res://primary/components/Inventory/UI.gd" id="1_oesre"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -67.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oesre")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 155.0
offset_right = 462.0
offset_bottom = 486.0

[node name="InventoryConainer" type="GridContainer" parent="ScrollContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 116.0
offset_right = 659.0
offset_bottom = 485.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FirstWeapon" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4/VBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2

[node name="Helmet" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Armor" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer3"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="SecondWeapon" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 114)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="OuterContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 154.0
offset_right = 900.0
offset_bottom = 484.0

[node name="InventoryConainer" type="GridContainer" parent="OuterContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8
